# nucleo-l432kc-cmake

./: CMakeLists.txt  README.md
cmake/: Findmbed.cmake  nucleo_l432kc_gcc.cmake
src/: CMakeLists.txt  RTC.h  main.cpp
